# qbrsh

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  cliff.toml
.github/workflows/: release.yml
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: Landing.vue  index.ts  style.css
docs/guide/: ad-blocking.md  architecture.md  automation.md  configuration.md  getting-started.md  keybindings.md  permissions.md  plugins.md  what-is-qbrsh.md
docs/reference/: commands.md  plugin-api.md
examples/plugins/: example.rn
js/: hints.js
src/: adblock.rs  app.rs  config.rs  history.rs  ipc.rs  main.rs  marks.rs  plugin.rs
src/core/: bindings.rs  command.rs  completion.rs  effect.rs  key.rs  mod.rs  msg.rs  runtime.rs  state.rs  trie.rs  update.rs
src/engine/: mod.rs  traits.rs  webkit.rs
src/input/: mod.rs
src/ui/: mod.rs  window.rs
