[package]
name = "qbrsh"
version = "0.4.0"
edition = "2024"
description = "A fast, keyboard-driven web browser"
license = "MIT OR Apache-2.0"
repository = "https://github.com/QaidVoid/qbrsh"
readme = "README.md"

[dependencies]
gtk4 = "0.11"
gdk4 = "0.11"
glib = "0.22"
webkit6 = "0.6"
async-channel = "2"
rusqlite = { version = "0.40.1", features = ["bundled"] }
directories = "6.0.0"
nucleo-matcher = "0.3.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
rune = "=0.14.2"
serde_json = "1.0.150"
